--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     "react/": "https://esm.sh/react@^18.2.0/",
     "react": "https://esm.sh/react@^18.2.0",
     "react-dom/": "https://esm.sh/react-dom@^18.2.0/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.10.0",
     "react-image-crop": "https://esm.sh/react-image-crop@^11.0.6",
-    "exifreader": "https://esm.sh/exifreader@^4.23.0"
+    "exifreader": "https://esm.sh/exifreader@^4.23.0",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0"
   }
 }
 </script>
@@ -320,6 +320,6 @@ html.dark .perspective-container:hover .description-3d-card {
       })();
     </script>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/index.js"></script>
   </body>
 </html>
